--- a/index.html
+++ b/index.html
@@ -1,1 +1,36 @@
-
+<html>
+   <head>
+       <title>Atividade</title>
+       <link rel="stylesheet" href="estilo.css">
+   </head>
+ <body>
+  <div class="linha">
+    <div class="vermelho"></div>
+    <div class="verde"></div>
+    <div class="azul"></div>
+    <div class="vermelho"></div>
+    <div class="verde"></div>
+    <div class="azul"></div>
+    <div class="vermelho"></div>
+    <div class="verde"></div>
+    <div class="azul"></div>
+    <div class="vermelho"></div>
+    <div class="verde"></div>
+    <div class="azul"></div>
+    <div class="vermelho"></div>
+    <div class="verde"></div>
+    <div class="azul"></div>
+    <div class="vermelho"></div>
+    <div class="verde"></div>
+    <div class="azul"></div>
+    <div class="vermelho"></div>
+    <div class="vermelho"></div>
+    <div class="verde"></div>
+    <div class="azul"></div>
+    <div class="vermelho"></div>
+    <div class="verde"></div>
+    <div class="azul"></div>
+    <div class="vermelho"></div>
+  </div>
+  
+</html>
