--- a/index.html
+++ b/index.html
@@ -1,36 +1,23 @@
-<html>
-   <head>
-       <title>Atividade</title>
-       <link rel="stylesheet" href="estilo.css">
-   </head>
- <body>
-  <div class="linha">
-    <div class="vermelho"></div>
-    <div class="verde"></div>
-    <div class="azul"></div>
-    <div class="vermelho"></div>
-    <div class="verde"></div>
-    <div class="azul"></div>
-    <div class="vermelho"></div>
-    <div class="verde"></div>
-    <div class="azul"></div>
-    <div class="vermelho"></div>
-    <div class="verde"></div>
-    <div class="azul"></div>
-    <div class="vermelho"></div>
-    <div class="verde"></div>
-    <div class="azul"></div>
-    <div class="vermelho"></div>
-    <div class="verde"></div>
-    <div class="azul"></div>
-    <div class="vermelho"></div>
-    <div class="vermelho"></div>
-    <div class="verde"></div>
-    <div class="azul"></div>
-    <div class="vermelho"></div>
-    <div class="verde"></div>
-    <div class="azul"></div>
-    <div class="vermelho"></div>
-  </div>
-  
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>PRIMEIRO MOBILI</title>
+    <link rel="stylesheet" href="mob.css">
+</head>
+<body>
+    <header class="menu">
+        menu
+    </header>
+    <section class="conteudo">
+        conteudo
+    </section>
+    <footer class="rodape">
+        @Gastao Vidigal <br>
+        Turma: Segundo G <br>
+        Direitos: @2g
+    </footer>
+</body>
 </html>
