--- a/index.html
+++ b/index.html
@@ -12,7 +12,18 @@
         menu
     </header>
     <section class="conteudo">
-        conteudo
+       <div class="info-cinema">
+        cinema
+       </div>
+       <div class="info-filmes">
+         filmes
+       </div>
+       <div class="info-retro">
+        retro
+       </div>
+       <div class="info-destaques">
+        Destaques (Por interece.)
+       </div>
     </section>
     <footer class="rodape">
         @Gastao Vidigal <br>
