--- a/index.html
+++ b/index.html
@@ -9,14 +9,24 @@
 
 </head>
 <body>
-    <header class="menu">
+   
+    <header class="header">
+        <a href="index.html" class="logo"> logo </a>
+        <input type="checkbox" class="side-menu" id="side-menu">
+        <label class="hamb" for="side-menu"><span class="hamb-line"></span></label>
+
         <nav>
-            <ul>
+            <ul class="menu">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="destaque.html">Destaque</a></li>
+                <li><a href="destaque.html">link0</a></li>
+                <li><a href="destaque.html">link1</a></li>
+                <li><a href="destaque.html">link2</a></li>
             </ul>
         </nav>
     </header>
+
+   
+   
     <section class="conteudo">
         <div class="info-cinema">
             <div class="info-texto">
