--- a/index.html
+++ b/index.html
@@ -11,11 +11,10 @@
 <body>
    
     <header class="header">
-        <a href="index.html" class="logo"> logo </a>
+        <a href="index.html" class="logo"> <img src="logo1.png" id="logo"> </a>
         <input type="checkbox" class="side-menu" id="side-menu">
         <label class="hamb" for="side-menu"><span class="hamb-line"></span></label>
-
-        <nav>
+        <nav class="nav">
             <ul class="menu">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="destaque.html">link0</a></li>
