--- a/index.html
+++ b/index.html
@@ -27,6 +27,16 @@
    
    
     <section class="conteudo">
+        <div class="conteudo-info">
+            <div class="img-info">
+                <img width="30%" src="projetor.png">
+            </div>
+            <div class="texto-info">
+                <h1>A diversão começa Aqui! O que é um filme</h1>
+                Segundo wikipedia ( <a href="https://pt.wikipedia.org/wiki/Filme#Refer%C3%AAncias">Acesse</a> ):Filme,fita ou película é um produto audiovisual finalizado, com uma certa duração, para ser exibido no cinema, na televisão ou em algum outro veículo. Um filme é formado por uma série finita de imagens fixas, registradas sobre um suporte físico e que, projetadas a uma velocidade maior que a capacidade resolutiva da visão humana, dão ao espectador a sensação de movimento.
+            </div>
+        </div>
+        <!--
         <div class="info-cinema">
             <div class="info-texto">
                 Filme King Kong antigo. 
@@ -37,7 +47,16 @@
             </div>
 
         </div>
-        <div class="info-filme">
+              <div class="info-cinema">
+            <div class="info-texto">
+                Barbaridade 2023. 
+            </div>
+            <div class="info-foto">
+                <img class="img-estilo" src ="barbie-poster.webp" alt="Um macaco gigante sobre um prédio.">
+
+            </div>
+
+        </div>
             
             <div class="info-texto">
                 Filme King Kong antigo. 
@@ -67,7 +86,7 @@
 
             </div>
         </div>
-
+        -->
     </section>
     <footer class="rodape">
         @Gastão Vidigal<br>
