--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <section class="conteudo">
         <div class="conteudo-info">
             <div class="img-info">
-                <img width="30%" src="projetor.png">
+                <img width="30%" src="logo.png">
             </div>
             <div class="texto-info">
                 <h1>A diversão começa Aqui! O que é um filme</h1>
